--- a/cloud-common/pom.xml
+++ b/cloud-common/pom.xml
@@ -19,6 +19,13 @@
 
 
     <dependencies>
+        <!-- OSS各个项⽬单独加依赖，根据需要进⾏添加-->
+        <dependency>
+
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.10.2</version>
+        </dependency>
         <!-- 代码自动生成依赖 begin -->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -81,8 +88,16 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <!--kaptcha依赖包-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>kaptcha-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
